# funtrans_calculatorpp

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  calculator_funtras.cpp  header.hpp  main.cpp
src/funtrans/: funtrans.cpp  funtrans.h  funtrans.hpp
src/gui/: init_gui.h  init_gui.hpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui
src/resources/: resources.qrc
src/test/: test_funtras.cpp  test_funtras.hpp
